feat: OcrResult DTO, davon-Trigger, Space-Tausender, Preis/Monat mit intervalDays
- OcrService returns OcrResult (rawText + ingredients) instead of List<IngredientDto>
- SupplementController.ocrExtract() updated to ResponseEntity<OcrResult>
- supplement_form.html: collapsible OCR raw-text debug box; JS handles new result shape
- supplements_list.html: Preis/Monat divides by consumptionIntervalDays for nonDaily supplements, shows '(alle X Tage)' label
- OcrTextParser: bare 'davon ' prefix triggers sub-ingredient detection; 'davon ' stripped from cleaned name; space-thousands normalization ('4 500' -> '4500') applied before regex matching
- Tests updated accordingly: 150 tests, 0 failures